--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ div{
     
 }
 h1{
+    margin-top:2rem;
     text-align: center;
     color: aquamarine;
 }
@@ -90,3 +91,4 @@ h1{
 .footer {
     margin-top:2rem;
 }
+
